--- a/shapes-app/index.html
+++ b/shapes-app/index.html
@@ -50,11 +50,12 @@
             <li class="flex items-center">
               <a
                 class="text-gray-800 md:text-white lg:text-white md:hover:text-gray-300 px-3 py-4 md:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://approov.io/docs"
+                href="https://github.com/approov/web-quickstart-fingerprintjs-javascript"
+                title="Approov FingerprintJS Quickstart Guide"
                 ><i
                   class="text-gray-500 sm:text-white far fa-file-alt text-xl leading-xl mr-2"
                 ></i>
-                Docs</a
+                Quickstart Guide</a
               >
             </li>
           </ul>
@@ -120,7 +121,7 @@
           </svg>
         </div>
       </section>
-      <section class="relative pt-20 pb-4">
+      <section class="relative pt-20 pb-0">
         <div class="container mx-auto px-4">
           <div
             class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64"
@@ -140,6 +141,9 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="pt-4">
+                <a href="/"><i class="fas fa-home"></i></a>
               </div>
               <div id="profile-section-header" class="text-center mt-16">
                 <h3
@@ -182,6 +186,11 @@
           </div>
         </div>
       </section>
+      <section class="relative pb-4">
+        <div class="container mx-auto">
+          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprintjs-javascript">quickstart guide</a> to learn how to integrate FingerprintJS with Approov in a web app</h4>
+        </div>
+      </section>
     </main>
     <footer class="relative pt-4 pb-2 approov-secondary-background-color">
 
@@ -214,7 +223,7 @@
             </div>
           </div>
           <div class="w-full mt-4 sm:w-4/12 px-0">
-            <div class="flex flex-wrap items-top mb-6">
+            <div class="flex flex-wrap items-top">
               <div class="w-full lg:w-4/12 px-4 ml-auto">
                 <span
                   class="block uppercase text-gray-900 text-sm font-semibold mb-2"
