--- a/shapes-app/fingerprintjs-protected/index.html
+++ b/shapes-app/fingerprintjs-protected/index.html
@@ -49,11 +49,12 @@
             <li class="flex items-center">
               <a
                 class="text-gray-800 md:text-white lg:text-white md:hover:text-gray-300 px-3 py-4 md:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://approov.io/docs"
+                href="https://github.com/approov/web-quickstart-fingerprintjs-javascript"
+                title="Approov FingerprintJS Quickstart Guide"
                 ><i
                   class="text-gray-500 sm:text-white far fa-file-alt text-xl leading-xl mr-2"
                 ></i>
-                Docs</a
+                Quickstart Guide</a
               >
             </li>
           </ul>
@@ -158,7 +159,7 @@
                   <div id="shape" class="hidden"><!-- <img src="assets/img/triangle.png" class="m-auto"> --></div>
                   <div id="success" class="hidden pt-2">
                     <p>200: OK</p>
-                    <p>FingerprintJS was confident the API request was due to a human using the web app</p>
+                    <p>FingerprintJS checked the API request was caused by the a human using the web app</p>
                   </div>
                 </div>
               </div>
