--- a/shapes-app/approov-fingerprintjs-protected/index.html
+++ b/shapes-app/approov-fingerprintjs-protected/index.html
@@ -159,7 +159,7 @@
                   <div id="shape" class="hidden"><!-- <img src="assets/img/triangle.png" class="m-auto"> --></div>
                   <div id="success" class="hidden pt-2">
                     <p>200: OK</p>
-                    <p>FingerprintJS checked the API request was caused by the a human using the web app</p>
+                    <p>FingerprintJS checked the API request was caused by a human using the web app</p>
                   </div>
                 </div>
               </div>
