Update for DPoP flow. Use shapes.approov.io API key.

--- a/shapes-app/index.html
+++ b/shapes-app/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="manifest.json">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/app.css">
-    <title>Approov FingerprintJS Quickstart</title>
+    <title>Approov Fingerprint Quickstart</title>
   </head>
   <body class="text-gray-800 antialiased bg-gray-100">
     <nav
@@ -32,7 +32,7 @@
           <a
             class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white"
             href="/"
-            ><h1>Approov FingerprintJS Quickstart</h1>
+            ><h1>Approov Fingerprint Quickstart</h1>
           </a>
           <button
             id="toggle-navbar"
@@ -51,7 +51,7 @@
               <a
                 class="text-gray-800 md:text-white lg:text-white md:hover:text-gray-300 px-3 py-4 md:py-2 flex items-center text-xs uppercase font-bold"
                 href="https://github.com/approov/web-quickstart-fingerprintjs-javascript"
-                title="Approov FingerprintJS Quickstart Guide"
+                title="Approov Fingerprint Quickstart Guide"
                 ><i
                   class="text-gray-500 sm:text-white far fa-file-alt text-xl leading-xl mr-2"
                 ></i>
@@ -169,7 +169,7 @@
                         <a href="/fingerprintjs-protected"
                             class="bg-yellow-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
                           >
-                          FingerprintJS Protected
+                          Fingerprint Protected
                         </a>
                       </div>
 
@@ -177,7 +177,7 @@
                         <a href="/approov-fingerprintjs-protected"
                             class="approov-logo-green-background active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
                           >
-                          Approov FingerprintJS Protected
+                          Approov Fingerprint Protected
                         </a>
                       </div>
                 </div>
@@ -188,7 +188,7 @@
       </section>
       <section class="relative pb-4">
         <div class="container mx-auto">
-          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprintjs-javascript">quickstart guide</a> to learn how to integrate FingerprintJS with Approov in a web app</h4>
+          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprintjs-javascript">quickstart guide</a> to learn how to integrate Fingerprint with Approov in a web app</h4>
         </div>
       </section>
     </main>
