Read API keys etc from configuration file.

--- a/shapes-app/fingerprintjs-protected/index.html
+++ b/shapes-app/fingerprintjs-protected/index.html
@@ -281,5 +281,5 @@
     async
     src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs-pro@3/dist/fp.min.js"
   ></script>
-  <script type="text/javascript" src="./assets/js/app.js"></script>
+  <script type="module" src="./assets/js/app.js"></script>
 </html>
