Updates for DPoP, change format to be similar to other frontend quickstarts.

--- a/shapes-app/index.html
+++ b/shapes-app/index.html
@@ -50,7 +50,7 @@
             <li class="flex items-center">
               <a
                 class="text-gray-800 md:text-white lg:text-white md:hover:text-gray-300 px-3 py-4 md:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://github.com/approov/web-quickstart-fingerprintjs-javascript"
+                href="https://github.com/approov/web-quickstart-fingerprint-javascript"
                 title="Approov Fingerprint Quickstart Guide"
                 ><i
                   class="text-gray-500 sm:text-white far fa-file-alt text-xl leading-xl mr-2"
@@ -166,7 +166,7 @@
                       </div>
 
                       <div class="py-4 px-2 mt-0">
-                        <a href="/fingerprintjs-protected"
+                        <a href="/fingerprint-protected"
                             class="bg-yellow-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
                           >
                           Fingerprint Protected
@@ -174,7 +174,7 @@
                       </div>
 
                       <div class="py-4 px-2 mt-0">
-                        <a href="/approov-fingerprintjs-protected"
+                        <a href="/approov-fingerprint-protected"
                             class="approov-logo-green-background active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
                           >
                           Approov Fingerprint Protected
@@ -188,7 +188,7 @@
       </section>
       <section class="relative pb-4">
         <div class="container mx-auto">
-          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprintjs-javascript">quickstart guide</a> to learn how to integrate Fingerprint with Approov in a web app</h4>
+          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprint-javascript">quickstart guide</a> to learn how to integrate Fingerprint with Approov in a web app</h4>
         </div>
       </section>
     </main>
