--- a/shapes-app/fingerprint-protected/index.html
+++ b/shapes-app/fingerprint-protected/index.html
@@ -16,7 +16,7 @@
     />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/app.css">
-    <title>Approov FingerprintJS Quickstart</title>
+    <title>Approov Fingerprint Quickstart</title>
   </head>
   <body class="text-gray-800 antialiased bg-gray-100">
     <nav
@@ -31,7 +31,7 @@
           <a
             class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white"
             href="/"
-            ><h1>Approov FingerprintJS Quickstart</h1>
+            ><h1>Approov Fingerprint Quickstart</h1>
           </a>
           <button
             id="toggle-navbar"
@@ -49,8 +49,8 @@
             <li class="flex items-center">
               <a
                 class="text-gray-800 md:text-white lg:text-white md:hover:text-gray-300 px-3 py-4 md:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://github.com/approov/web-quickstart-fingerprintjs-javascript"
-                title="Approov FingerprintJS Quickstart Guide"
+                href="https://github.com/approov/web-quickstart-fingerprint-javascript"
+                title="Approov Fingerprint Quickstart Guide"
                 ><i
                   class="text-gray-500 sm:text-white far fa-file-alt text-xl leading-xl mr-2"
                 ></i>
@@ -97,7 +97,7 @@
       <section id="profile-section" class="relative block">
         <div class="absolute top-0 w-full h-full bg-center bg-cover">
           <span
-            class="w-full h-full absolute approov-primary-background-color"
+            class="w-full h-full absolute bg-yellow-500"
           ></span>
         </div>
         <div
@@ -150,7 +150,7 @@
                 >
                   Shapes App
                 </h3>
-                <h4 class="font-semibold">API Requests protected with Approov FingerprintJS</h4>
+                <h4 class="font-semibold">API Requests protected with Fingerprint</h4>
                 <div id="app-body" class="my-2 text-gray-700">
                   <div id="start-app">Click the <strong>Hello</strong> or <strong>Shapes</strong> button to make a protected API request...</div>
                   <div id="hello" class="hidden"><img src="assets/img/hello.png" class="m-auto"></div>
@@ -159,7 +159,7 @@
                   <div id="shape" class="hidden"><!-- <img src="assets/img/triangle.png" class="m-auto"> --></div>
                   <div id="success" class="hidden pt-2">
                     <p>200: OK</p>
-                    <p>FingerprintJS checked the API request was caused by a human using the web app</p>
+                    <p>Fingerprint checked the API request was caused by a human using the web app</p>
                   </div>
                 </div>
               </div>
@@ -168,7 +168,7 @@
                   <div class="py-4 px-8 mt-0">
                     <button
                       id="hello-button"
-                      class="button-transition bg-blue-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 button-transition"
+                      class="bg-blue-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 button-transition"
                       type="button"
                     >
                       Hello
@@ -178,7 +178,7 @@
                   <div class="py-4 px-8 mt-0">
                     <button
                       id="shape-button"
-                      class="button-transition bg-blue-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 button-transition"
+                      class="bg-blue-500 active:bg-blue-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 button-transition"
                       type="button"
                     >
                       Shape
@@ -192,7 +192,7 @@
       </section>
       <section class="relative pb-4">
         <div class="container mx-auto">
-          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprintjs-javascript">quickstart guide</a> to learn how to integrate FingerprintJS with Approov in a web app</h4>
+          <h4 class="text-center">Read this <a class="text-blue-600" href="https://github.com/approoov/web-quickstart-fingerprint-javascript">quickstart guide</a> to learn how to integrate Fingerprint with Approov in a web app</h4>
         </div>
       </section>
     </main>
@@ -281,5 +281,5 @@
     async
     src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs-pro@3/dist/fp.min.js"
   ></script>
-  <script type="text/javascript" src="./assets/js/app.js"></script>
+  <script type="module" src="./assets/js/app.js"></script>
 </html>
